<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/title_and_settings_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/main_title"
        android:fontFamily="sans-serif-light"
        android:paddingTop="@dimen/activity_horizontal_margin"/>

        <ImageView
            android:src="@drawable/gear"
            android:layout_gravity="bottom"
            android:onClick="settingsOnClick"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/emergency_buttons"
        android:layout_below="@id/title_and_settings_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/not_safe_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/not_safe"
                android:background="@drawable/roundedsteel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>
            <Button
                android:id="@+id/food_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/food"
                android:background="@drawable/roundedsteel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>
            <Button
                android:id="@+id/missing_person_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/missing_person"
                android:background="@drawable/roundedsteel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/omgcircle"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/money_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/money"
                android:background="@drawable/roundedsteel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>

            <Button
                android:id="@+id/shelter_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/shelter"
                android:background="@drawable/roundedsteel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>
            <Button
                android:id="@+id/mental_button"
                android:layout_width="@dimen/emergency_buttons_width"
                android:layout_height="@dimen/emergency_buttons_height"
                android:text="@string/mental"
                android:background="@drawable/roundedsteel"
                android:textColor="@color/emergency_buttons_text_color"
                android:textSize="@dimen/emergency_buttons_text_size"
                android:fontFamily="sans-serif-thin"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sos_and_911"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emergency_buttons"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sos_button"
            android:layout_width="@dimen/emergency_buttons_height"
            android:layout_height="@dimen/emergency_buttons_width"
            android:layout_gravity="start"
            android:text="SOS"
            android:onClick="popUpList"
            android:background="@drawable/redroundbox"
            android:textColor="@color/emergency_buttons_text_color"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:padding="-100dp" />
        <Space
            android:layout_width="@dimen/emergency_buttons_width"
            android:layout_height="@dimen/emergency_buttons_height"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/button_911"
            android:layout_width="@dimen/emergency_buttons_height"
            android:layout_height="@dimen/emergency_buttons_width"
            android:background="@drawable/redroundbox"
            android:text="911"
            android:textColor="@color/emergency_buttons_text_color" android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:onClick="call911" />
    </LinearLayout>

</RelativeLayout>
